--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lang = "fr">
 <head>
   <!-- basic.html -->
-  <title>index.html</title>
+  <title>index.index</title>
   <meta charset = "UTF-8" />
 </head>
 <body>
-  <h1>Level One Headline</h1>
-  <p>
-    This is a paragraph.
-    Note that the text is automatically wrapped.
-  </p>
+  <h1>Djamal</h1>
+  <p>Le silence est un ami qui ne trahit jamais</p>
+  <img src="https://images.theconversation.com/files/320115/original/file-20200312-111261-1kmkv8p.jpg?ixlib=rb-1.1.0&rect=53%2C0%2C6000%2C3925&q=45&auto=format&w=926&fit=clip"alt="photo">
+  <table style="width:100%">
+  <tr>
+    <th>birthday 08/11/1992/th>
+    <th>favorite color bleu/th>
+    <th>favorite food riz</th>
+  </tr>
+  <p> mes hobbies <p>
+  	<tr>
+    <td> fitness</td>
+    <td>lire</td>
+    <td>fetes</td>
+  </tr>
+  </table>
+  <h2> je veux devenir un devellopeur web </h2>
 </body>
 </html>
