--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE HTML>
 <html lang = "fr">
 <head>
-  <!-- basic.html -->
-  <title>index.index</title>
-  <meta charset = "UTF-8" />
-</head>
+     <title>CSS- Cascading Style Sheets</title>
+     <meta charset = "UTF-8" />
+     <link rel="stylesheet" type="text/css" href="css/style.css" />
+     <script src="https://kit.fontawesome.com/464faf8088.js" crossorigin="anonymous"></script>
+ </head>
 <body>
-  <h1>Djamal</h1>
-  <p>Le silence est un ami qui ne trahit jamais</p>
-  <img src="https://images.theconversation.com/files/320115/original/file-20200312-111261-1kmkv8p.jpg?ixlib=rb-1.1.0&rect=53%2C0%2C6000%2C3925&q=45&auto=format&w=926&fit=clip"alt="photo">
-  <table style="width:100%">
-  <tr>
-    <th>birthday 08/11/1992/th>
-    <th>favorite color bleu/th>
-    <th>favorite food riz</th>
-  </tr>
-  <p> mes hobbies <p>
-  	<tr>
-    <td> fitness</td>
-    <td>lire</td>
-    <td>fetes</td>
-  </tr>
-  </table>
-  <h2> je veux devenir un devellopeur web </h2>
+  <h1>Tim Berners-Lee</h1>
+  <img src="https://www.internethalloffame.org/sites/default/files/inductees/Berners-Lee_Tim.jpg" alt="Paris" width="300" height="300">
+  <h2>inventor of HTML</h2
+
+  <p>Tim berners-lee is the <strong>Inventor</strong> of the Web in 1989.Tim was working in a computing services section of CERN when he came up with the concept at the time he had no idea that it would be implemented on such an <strong>enormous scale</strong></p>
+  <p> see for yourself</p>
+  <i class="fab fa-facebook-f"></i>
+  <i class="fab fa-linkedin-in"></i>
+  <i class="fab fa-twitter"></i>
+<p>His Favorite movies</p>
+<h3>2001 - Space Odyssey</h3>
+<p>Humanity finds a mysterious, obviously artifical, objet buried beneath the Lunar surface and, with the intelligent computer H.A.I. 9000, sets off on a quest.</p>
+<h4>Monsieur Hulot</h4>
+<p>hulot comes to a beachside hotel for a vacation, where he accidentally (but good-naturedly) causes havoc.</p>
+<h5>Alien</h5>
+<p>The commercial vessel nostromo receives a distress call from an unexplored planet.After searching for survivors, the crew heads home only to realize that a deadly bioform has joined them.</p>
 </body>
 </html>
